rnsc/test_data/integration/error/parser/class_header/access_flags/mixed_valid_and_invalid.rns
.class public native final bridge HelloWorld
.super java/lang/Object
.class_end
